fixed choices overflowing out of browser on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 #gameArea{
-    position: fixed;
+    /* position: fixed;
     top:1%;
     bottom: 3%;
     left: 8%;
-    right: 8%;
+    right: 8%; */
     background-color: rgb(0, 0, 161);
     opacity: .93;
     min-width: 535px;
-    /* min-height: 500px; */
+    min-height: 800px;
 }
 
 body{
